--- a/about.html
+++ b/about.html
@@ -6,13 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <div style="display: flex-centre;"></div>
     <h1>cuba (havana)</h1>
-    <div style ="padding-top: 60px; "></div>
-    <div style="display: flex; border: 2px solid red;" >
+    <div style ="padding-top: 20px; "></div>
+    <div style="display: flex; border: 2px solid rgb(0, 0, 0);" >
     </div>
-<div style ="padding-left:50px ; ></div>
-    <img width="500px" src="https://images.unsplash.com/photo-1581253058396-24685f752e68?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y3ViYSUyMChoYXZhbmEpfGVufDB8fDB8fHww" alt="">
+    <img style="width: 500px;" src="https://images.unsplash.com/photo-1581253058396-24685f752e68?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Y3ViYSUyMChoYXZhbmEpfGVufDB8fDB8fHww" alt="">
     <p>Havana is the capital city of Cuba and is known for its rich history, vibrant culture, and colorful streets. The city features beautiful Spanish colonial architecture, especially in Old Havana, a UNESCO World Heritage Site with cobblestone streets and historic plazas. Classic cars from the 1950s, lively music, and street art give Havana a unique and energetic atmosphere. The Malecón, a famous seaside boulevard, is a popular gathering place where people enjoy ocean views and sunsets. Havana reflects Cuba’s cultural pride through its music, dance, food, and strong sense of community.</p>
-
+    <h2>ABOUT</h2>
+    <div><p>Cuba is a Caribbean island nation with a rich and complex history, shaped by Indigenous roots, Spanish colonization, African heritage, and revolutionary change. Known for its vibrant culture, Cuba is famous for music styles such as salsa, son, and rumba, as well as for dance, art, and colorful traditions that play an important role in everyday life. The country’s architecture reflects its past, with Spanish colonial buildings, historic fortresses, and towns filled with bright, weathered facades. Cuba’s natural beauty includes white-sand beaches, warm turquoise waters, fertile valleys, and mountain ranges like the Sierra Maestra. Despite economic challenges and limited resources, Cuba has made notable achievements in education, healthcare, and literacy, which are widely recognized around the world. Strong community bonds, national pride, and resilience define Cuban society, making the country a place where history, culture, and identity remain deeply connected.</p></div>
+    <div><img style="width: 500px;" height="600px" src="https://images.unsplash.com/photo-1579516432270-eafa23d73c56?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OTJ8fGN1YmElMjAoaGF2YW5hKXxlbnwwfHwwfHx8MA%3D%3D" alt=""></div>
+    
 </body> 
-</html> 
+</html>
