--- a/index.html
+++ b/index.html
@@ -2,10 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Djo</title>
+    <link rel="icon" href="images/501600111_18067804184313094_6026249329489192985_n.jpg" type="image/x-icon">
 </head>
-<body>
-    <h1>hello ki hal cahl aye</h1>
+<bod></bod>
+
+<div style="display:flex ;width: fit-content; height: 100px;">
+    <img style=width:80px src="images/images.jpg" alt="">
+    <h1 style="padding: auto;font-size: 40px;">Cadet College Pasrur: A Center of Excellence</h1>
+</div>
+    <p>Cadet College Pasrur is a prestigious residential institution renowned for its high academic standards, disciplined environment, and commitment to developing future leaders. Established with the vision of providing quality education combined with character building, the college offers a balanced system that nurtures intellectual, physical, and moral growth. The institution follows a structured academic curriculum supported by experienced and dedicated faculty members who focus on conceptual learning, critical thinking, and academic excellence.
+
+Along with academics, Cadet College Pasrur places great emphasis on discipline, leadership training, and personal development. The cadet system instills qualities such as responsibility, confidence, teamwork, and respect for rules. Regular physical training, sports, and outdoor activities help cadets maintain physical fitness and develop resilience, endurance, and a competitive spirit. The college also encourages participation in debates, quizzes, dramatics, and other co-curricular activities to enhance communication skills and creativity.
+
+The campus provides a secure and well-organized residential environment equipped with modern facilities, libraries, laboratories, and sports grounds. Living away from home helps cadets become independent, self-reliant, and adaptable to challenges. Moral values, integrity, and patriotism are strongly emphasized, preparing students to become responsible citizens and contributors to society.
+
+Cadet College Pasrur aims to produce well-rounded individuals who excel not only in academics but also in leadership and social responsibilities. Through its comprehensive training and value-based education, the college prepares its cadets for higher education, professional careers, and leadership roles in various fields. The institution continues to play a vital role in shaping confident, disciplined, and motivated individuals ready to serve the nation with dedication and honor.</p>
+
+<!--images-->
+
+
+<hr>
+<img style=width:900px src="images/banner1.webp" alt="">
+<hr/>
+
+<h1 style="text-transform: uppercase;">principal</h1>
+
+<div style="width: 500px; height: 500px; border: 2px solid black">
+    <img style="width: 500px; height: 500px;" src="images/principal.jpg" alt="">
+</div>
+
+
+
+    <h1>Lieutenant Colonel (R) Javaid Aleem Khan</h1>
+    <p>Lieutenant Colonel (R) Javaid Aleem Khan is a respected and disciplined former officer of the Pakistan Army, known for his dedication, leadership, and commitment to excellence. Throughout his military career, he demonstrated strong professional ethics, strategic thinking, and the ability to lead and mentor others with integrity. After retirement, he continued to serve society through his experience, discipline, and guidance, leaving a positive impact wherever he worked. His personality reflects confidence, responsibility, and a strong sense of duty, making him a role model for students and young individuals. Lieutenant Colonel (R) Javaid Aleem Khan’s contributions highlight the values of discipline, patriotism, and lifelong service to the nation.
+</p>
+
+
+
+
+
+
+<a href="https://cadetcollegepasrur.edu.pk/">cadetcollegepasrur</a>
+<h2>CONTACT ME</h2>
+<a href="email.html">DM</a>
+<br />
+<br />
+<a href="number.html">WHATSAPP</a>
 </body>
 </html>
+ 
