--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
 </head>
 <bod></bod>
 
+
+<!--navigation bar-->
+
+
+
+<div style="width:fit-contents; height: 30px; border: solid blue; background-color: rgb(42, 4, 168); display: flex; justify-content: space-between; padding: 20px; align-items: center;  ">
+    
+    <a  href="https://cadetcollegepasrur.edu.pk/"><img style="width: 50px; height: 50px; justify-content: left; " src="images/images-removebg-preview.png"></a>
+    <h1 style="width: fit-content; font-size: 18px; color: aliceblue;  word-spacing: 20px;  "> HOME          ABOUT           LOGIN</h1>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div style="display:flex ;width: fit-content; height: 100px;">
     <img style=width:80px src="images/images.jpg" alt="">
     <h1 style="padding: auto;font-size: 40px;">Cadet College Pasrur: A Center of Excellence</h1>
