--- a/FORNT.html
+++ b/FORNT.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+< lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,7 +29,7 @@
 
       /*tag based selector*/
       nav {
-        border: 1px solid red;
+        border: 1px solid rgb(55, 0, 255);
         padding: 10px 20px;
         background-color: black;
         display: flex;
@@ -51,11 +51,11 @@
       }*/
 
       .bg-red {
-        background-color: rgb(0, 115, 161);
+        background-color: rgb(20, 255, 239);
       }
 
       .text-white {
-        color: rgb(255, 181, 234);
+        color: rgb(0, 0, 0);
       }
     </style>
 
@@ -74,13 +74,19 @@
     </p>
 
     <!-- Inline CSS -->
-    <h1 id="heading">cuba (havana)</h1>
+    <h1 id="heading"> CUBA (Havana)</h1>
     <div id="parent">
       <div class="child bg-red text-white">"Christopher Columbus arrives in Cuba – 1492"</div>
       <div class="child bg-red text-white">"Ten Years’ War (Cuba’s first war for independence from Spain) – 1868–1878"</div>
       <div class="child bg-red text-white">"Cuban War of Independence – 1895–1898"</div>
       <div class="child bg-red text-white">"Cuban Revolution (led by Fidel Castro) – 1953–1959"</div>
+      <div class="child bg-red text-white">"1962 – Cuban Missile Crisis"</div>
+      
     </div>
-   
-</body>
-</html>
+    <div>
+      <h4>HISTORY</h4>
+      <P>Havana, the vibrant capital of Cuba, is a city where history, culture, and everyday life blend together in a way that feels both timeless and alive. Founded in the early 1500s, Havana carries the marks of Spanish colonial influence in its narrow cobblestone streets, colorful buildings, and grand plazas, especially in Old Havana, a UNESCO World Heritage Site. The city is famous for its pastel-painted houses with peeling paint, classic American cars from the 1950s cruising along the Malecón, and the sound of music drifting from open doorways, whether it’s salsa, son, or jazz. Havana’s waterfront seawall, the Malecón, is one of the city’s most iconic places, serving as a gathering spot where locals fish, talk, laugh, and watch the waves crash against the stone barrier at sunset. Beyond its visual charm, Havana is deeply shaped by its history of revolution, resilience, and creativity, which can be seen in its museums, murals, and daily routines. Despite economic challenges, the people of Havana are known for their warmth, humor, and strong sense of community, making the city feel welcoming and full of character. Together, Havana’s rich past, artistic spirit, and lively atmosphere make it a place that leaves a lasting impression on anyone who learns about or visits it.</P>
+      <a href="this is the for google"></a>
+      </div>
+    </body>
+    </html>
