--- a/about.html
+++ b/about.html
@@ -19,3 +19,12 @@
     
 </body> 
 </html>
+ footer {
+            background-color: #023e8a;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
