--- a/medinova 1.html
+++ b/medinova 1.html
@@ -38,14 +38,10 @@
         h2 {
             color: #0077b6;
         }
-        footer {
-            background-color: #023e8a;
-            color: white;
+         footer {
+            color:#023e8a;
             text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            font-size: 25px;
         }
     </style>
 </head>
@@ -83,12 +79,12 @@
     <p>
         Our mission is to improve patient health through accurate diagnosis,
         effective treatment, and compassionate care.
-        The mission of modern hospital technologies is to improve the quality, safety, and accessibility of healthcare for all patients. By using advanced medical equipment, digital records, and smart systems, hospitals aim to provide accurate diagnoses, effective treatments, and faster recovery. These technologies support healthcare professionals in making better decisions, reducing medical errors, and delivering personalized care. In addition, modern hospital technologies strive to make healthcare more efficient and patient-centered, ensuring that services are reliable, innovative, and focused on improving overall health outcomes.
-
-
-
-
-
+        The mission of modern hospital technologies is to improve the quality, safety,
+        and accessibility of healthcare for all patients. By using advanced medical equipment, digital records, 
+        and smart systems, hospitals aim to provide accurate diagnoses, effective treatments, and faster recovery.
+        These technologies support healthcare professionals in making better decisions, reducing medical errors, 
+        and delivering personalized care.
+        
     </p>
 </section>
 
