--- a/figma 1.html
+++ b/figma 1.html
@@ -87,7 +87,8 @@
 
 <body>
     <div id='card'>
-        <img src="https://images.unsplash.com/photo-1583692331507-fc0bd348695d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTF8fHBob3RvJTIwb2YlMjBhJTIwcHJvZ3JhbSUyMGRldmVsb3BlcnxlbnwwfHwwfHx8MA%3D%3D" alt="">
+        <img src="https://images.unsplash.com/photo-1583692331507-fc0bd348695d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTF8fHBob3RvJTIwb2YlMjBhJTIwcHJvZ3JhbSUyMGRldmVsb3BlcnxlbnwwfHwwfHx8MA%3D%3D"
+            alt="">
         <div id="right">
             <h1 class="roboto-medium">Hassan</h1>
             <p class="roboto-regular">backend development</p>
